# pyrenamer

pyrenamer/: ChangeLog  NEWS  README  configure.ac
pyrenamer/data/: Makefile.am  org.infinicode.pyrenamer.gschema.xml  pyrenamer.glade
pyrenamer/debian/: changelog  control
pyrenamer/src/: EXIF.py  Makefile.am  TreeViewTooltips.py  pyrenamer  pyrenamer.py  pyrenamer_filefuncs.py  pyrenamer_globals.py.in  pyrenamer_menu_cb.py  pyrenamer_metadata.py  pyrenamer_pattern_editor.py  pyrenamer_prefs.py  pyrenamer_tooltips.py  pyrenamer_undo.py  treefilebrowser.py
